--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,65 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+
+<!-- Section: Design Block -->
+<section class="">
+    <!-- Jumbotron -->
+    <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+      <div class="container">
+        <div class="row gx-lg-5 align-items-center">
+          <div class="col-lg-6 mb-5 mb-lg-0">
+            <h1 class="my-5 display-3 fw-bold ls-tight">
+              The best offer <br />
+              <span class="text-primary">for your business</span>
+            </h1>
+            <p style="color: hsl(217, 10%, 50.8%)">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Eveniet, itaque accusantium odio, soluta, corrupti aliquam
+              quibusdam tempora at cupiditate quis eum maiores libero
+              veritatis? Dicta facilis sint aliquid ipsum atque?
+            </p>
+          </div>
+  
+          <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="card">
+              <div class="card-body py-5 px-md-5">
+                <form  method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                    {% csrf_token %}
+                    <div class="formulario">
+                        {{ form | crispy }}
+                       
+                      </div>    
+                  <!-- Submit button -->
+                  <button type="submit" class="btn btn-primary btn-block mb-4 botones">
+                    {% trans "Change Password" %}
+                  </button>
+  
+                  <!-- Register buttons -->
+                  <div class="text-center">
+                    <p>
+                        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                    </p>
+
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Jumbotron -->
+  </section>
+  <!-- Section: Design Block -->
+
+
+
+   
 {% endblock %}
