--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -7,25 +7,37 @@
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<div class="m-5">
+    <div class="jumbotron">
+        <h1 class="display-4">{% trans "Confirm E-mail Address" %}</h1>
 
-{% if confirmation %}
+        {% if confirmation %}
+        {% user_display confirmation.email_address.user as user_display %}
 
-{% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+        <p class="lead">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+        <hr class="my-4">
+       
+        <p class="lead">
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+            {% csrf_token %}
+                <button class="btn btn-primary btn-lg" type="submit">{% trans 'Confirm' %}</button>
+            </form>
+        </p>
+        {% else %}
 
-{% else %}
+            {% url 'account_email' as email_url %}
 
-{% url 'account_email' as email_url %}
+            <p class="lead">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+            {% endif %}
 
-{% endif %}
+      </div>
+</div>
+
+
+
+
 
 {% endblock %}
