--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Favicon-->
-    <link rel="icon" href="https://ipfs.io/ipfs/QmYFuM4z8hTBs7ss8ZCRpAt7fV42kZXdp1NDGp5NC53ATL?filename=logo.png" />
-
+    <!--Favicon
+    <link rel="icon" type="texyt/html" href="https://ipfs.io/ipfs/QmYFuM4z8hTBs7ss8ZCRpAt7fV42kZXdp1NDGp5NC53ATL?filename=logo.png" />
+    -->
     <!-- AlpineJS -->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
 
