--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -59,6 +59,9 @@
                 <div class="text-center">
                   <p>Si no tienes cuenta, registrate aqui
                     <a href="{{ signup_url }}">Registrarse</a></p>
+
+                    <p>Si Eres administrador
+                      <a href="/admin">Ingresar</a></p>
                  
                  
                 </div>
