--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,19 +1,23 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <div class="m-5">
+        <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p>{% blocktrans %}El enlace de restablecimiento de contraseña no era válido, posiblemente porque ya se usó. Solicite un <a href="{{ passwd_reset_url }}">nuevo restablecimiento de contraseña</a>.{% endblocktrans %}</p>
+        {% else %}
+            <form method="POST" action="{{ action_url }}">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input class="btn btn-primary btn-block mb-4 botones" type="submit" name="action" value="{% trans 'change password' %}"/>
+            </form>
+
+        </div>
     {% endif %}
 {% endblock %}
