--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <div class="m-5">
+        <div class="jumbotron">
+            <h1>{% trans "Change Password" %}</h1>
+            <p>Tu contraseña cambió exitosamente</p>
+            <p><a class="btn btn-primary btn-lg" href="/" role="button">Ingresar</a></p>
+          </div>
+    </div>
+    
 {% endblock %}
