--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,3 @@
-.formulario{
- 
-    
-}
 
 .olvideContraseña{
     margin-top: 1rem;
@@ -9,4 +5,8 @@
 
 .botones{
     margin-top: 1rem;
+}
+
+.usuario{
+    background-color: red;
 }
