--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -15,15 +15,15 @@
       <div class="row gx-lg-5 align-items-center">
         <div class="col-lg-6 mb-5 mb-lg-0">
           <h1 class="my-5 display-3 fw-bold ls-tight">
-            The best offer <br />
-            <span class="text-primary">for your business</span>
+            Rembryn <br />
+            <span class="text-primary">tu mejor opción</span>
           </h1>
-          <p style="color: hsl(217, 10%, 50.8%)">
+          <!-- <p style="color: hsl(217, 10%, 50.8%)">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Eveniet, itaque accusantium odio, soluta, corrupti aliquam
             quibusdam tempora at cupiditate quis eum maiores libero
             veritatis? Dicta facilis sint aliquid ipsum atque?
-          </p>
+          </p> -->
         </div>
 
         <div class="col-lg-6 mb-5 mb-lg-0">
