--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,11 @@
     <!--Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
     
-    
+    <link type='text/css' href='{% static "css/styles.css" %}' rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <title>Rembryn</title>
 
 
     <title></title>
@@ -19,12 +21,14 @@
 
 <body class="bg-gray-100 dark:bg-dark-main  ">
 
-    <!-- NAVBAR -->
-    {% block navbar %}{% endblock navbar %}
+    <!-- NAVBAR
+    {% block navbar %}{% endblock navbar %} -->
 
     <!--CONTENT-->
     <div class="flex justify-center h-screen ">
-      
+        {% block content %}
+        
+        {% endblock content %}
         
     </div>
 
