--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
         {% if not user.is_authenticated %}
             <a href="{% url 'account_login' %}">Inicio</a>
